# ci-tools

./: .clog.toml  .gitignore  .restyled.yaml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  README.md
.github/: settings.yml
.github/workflows/: check-release.yml  checks.yml  ci.yml  common-ci.yml  deploy-android.yml  deploy-appimage.yml  deploy-artifact.yml  deploy-flatpak.yml  deploy-macos.yml  deploy-prepare.yml  deploy-windows.yml  deploy.yml  draft.yml  flutter-pages.yml  flutter.yml  haskell-ci.yml  haskell-publish.yml  netlify.yml  release-deploy.yml  release-drafter.yml  release-soon.yml  release.yml
.github/workflows/haskell/: ci.yml  publish.yml
.netlify/: state.json
.reviewable/: completion.js
cmake/: Installation.cmake
platform/: deps.depfile
platform/android/6.2.4/: AndroidManifest.xml
platform/android/6.8.1/: AndroidManifest.xml
platform/android/cross-compile/: build.sh
platform/appimage/: build.sh
platform/flatpak/: build.sh  chat.tox.CiTools.json
platform/linux/: chat.tox.CiTools.appdata.xml  chat.tox.CiTools.desktop
platform/macos/: Brewfile-static  Info.plist  build.sh  createdmg
platform/wasm/: wasm  wasm.Dockerfile
platform/windows/: citools.rc  citools64.nsi  generate-icon.sh
platform/windows/cross-compile/: build.sh  dll-deps
src/: main.cpp
tools/: add_upstream_remote.sh  artifact_rename.py  artifact_rename_logic_test.py  artifact_rename_test.py  artifact_sha256.py  artifact_sha256_test.py  circleci-bazel-test  create_release.py  create_release_test.py  create_tarballs.py  create_tarballs_test.py  import_developer_keys.sh  install_apple_cert.sh  release_e2e_test.py  rename_artifact.py  sign_release_assets.py  sign_tag.py  sign_tag_test.py  translate.py  translate_test.py  update-versions.sh  update_changelog.py  update_changelog_format_test.py  update_changelog_log_parser_test.py  update_changelog_logic_test.py  update_changelog_test.py  update_flathub_descriptor_dependencies.py  update_flathub_descriptor_dependencies_test.py  update_goldens.py  update_nodes.py  update_nodes_test.py  use_github_actions_identity.sh  validate_pr.py  validate_pr_test.py  verify_all.py  verify_appimage.py  verify_common.py  verify_release_assets.py
tools/lib/: changelog.py  changelog_test.py  git.py  git_test.py  github.py  github_parsing_test.py  github_test.py  stage.py  types.py
workflows/: check-release.yml
