load("//third_party/python:build_defs.bzl", "mypy_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

mypy_test(
    name = "mypy_test",
    srcs = glob(["**/*.py"]),
    path = [
        "external/typeshed/stubs/requests",
        #"@typeshed//:stubs/requests/requests/__init__.pyi",
    ],
    deps = ["@typeshed//:requests"],
)
