load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//third_party/python:build_defs.bzl", "mypy_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

py_library(
    name = "lib",
    srcs = glob(["tools/lib/*.py"]),
    imports = ["tools"],
    visibility = ["//visibility:public"],
    deps = [
        "@requests",
        "@typeshed//:requests",
    ],
)

py_library(
    name = "create_release_lib",
    srcs = glob(
        ["tools/*.py"],
        exclude = ["tools/*_test.py"],
    ),
    imports = ["tools"],
    deps = [
        ":lib",
    ],
)

py_test(
    name = "github_test",
    srcs = ["tools/lib/github_test.py"],
    deps = [":lib"],
)

py_test(
    name = "github_parsing_test",
    srcs = ["tools/lib/github_parsing_test.py"],
    deps = [":lib"],
)

py_test(
    name = "git_test",
    srcs = ["tools/lib/git_test.py"],
    deps = [":lib"],
)

py_test(
    name = "create_release_test",
    srcs = ["tools/create_release_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "release_e2e_test",
    srcs = ["tools/release_e2e_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "artifact_rename_test",
    srcs = ["tools/artifact_rename_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "update_changelog_test",
    srcs = ["tools/update_changelog_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "artifact_sha256_test",
    srcs = ["tools/artifact_sha256_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "create_tarballs_test",
    srcs = ["tools/create_tarballs_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "sign_tag_test",
    srcs = ["tools/sign_tag_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "changelog_test",
    srcs = ["tools/lib/changelog_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "update_changelog_logic_test",
    srcs = ["tools/update_changelog_logic_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "update_changelog_log_parser_test",
    srcs = ["tools/update_changelog_log_parser_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "update_changelog_format_test",
    srcs = ["tools/update_changelog_format_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "update_nodes_test",
    srcs = ["tools/update_nodes_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "translate_test",
    srcs = ["tools/translate_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "artifact_rename_logic_test",
    srcs = ["tools/artifact_rename_logic_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "validate_pr_test",
    srcs = ["tools/validate_pr_test.py"],
    deps = [":create_release_lib"],
)

py_test(
    name = "update_flathub_descriptor_dependencies_test",
    srcs = ["tools/update_flathub_descriptor_dependencies_test.py"],
    deps = [":create_release_lib"],
)

mypy_test(
    name = "mypy_test",
    srcs = glob(["**/*.py"]),
    path = [
        "external/typeshed/stubs/requests",
        "@typeshed//:stubs/requests/requests/__init__.pyi",
    ],
    deps = ["@typeshed//:requests"],
)
